--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Lecture 18 jQuery FAQ accordion</title>
+<title>jQuery FAQ accordion</title>
 <link rel="stylesheet" href="css/lecture18.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"> </script>
 <script src="scripts/lecture18.js"></script>
